[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Food/Bean/GreenBean.gd" type="Script" id=1]
[ext_resource path="res://assets/food/bean_mid.png" type="Texture" id=2]
[ext_resource path="res://assets/food/bean_top.png" type="Texture" id=3]
[ext_resource path="res://assets/food/bean_bottom.png" type="Texture" id=4]
[ext_resource path="res://src/Food/ChopPoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sfx/bean_snap.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "SnapBottom"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Bottom:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -40 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_chop_animation_complete"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "SnapTop"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 40 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_chop_animation_complete"
} ]
}

[node name="GreenBean" type="Node2D"]
position = Vector2( 191.315, 376.578 )
script = ExtResource( 1 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( -3.99997, 37.9999 )

[node name="MiddleSprite" type="Sprite" parent="Sprites"]
position = Vector2( 5.55063, -44.6462 )
texture = ExtResource( 2 )

[node name="Bottom" type="Node2D" parent="Sprites"]
position = Vector2( 0, -40 )

[node name="BottomSprite" type="Sprite" parent="Sprites/Bottom"]
position = Vector2( 15.5125, -214.958 )
texture = ExtResource( 4 )

[node name="Top" type="Node2D" parent="Sprites"]
position = Vector2( 0, 40 )

[node name="TopSprite" type="Sprite" parent="Sprites/Top"]
position = Vector2( 14.2989, 98.9779 )
texture = ExtResource( 3 )

[node name="TopChop" parent="." instance=ExtResource( 5 )]
position = Vector2( 4.4321, 63.1577 )

[node name="BottomChop" parent="." instance=ExtResource( 5 )]
position = Vector2( 0.540131, -80.6674 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SnapBottom = SubResource( 1 )
anims/SnapTop = SubResource( 2 )

[node name="SnapSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="chop" from="TopChop" to="." method="_on_TopChop_chop"]
[connection signal="chop" from="BottomChop" to="." method="_on_BottomChop_chop"]
